added pitest and spock framework