@@ -1,14 +1,15 @@
 package com.example.demo.service;
 
-import com.example.demo.entity.Car;
-import com.example.demo.entity.User;
+import com.example.demo.domain.Car;
+import com.example.demo.domain.User;
 import com.example.demo.repository.CarRepository;
-import com.example.demo.request.CarRequest;
-import com.example.demo.response.CarResponse;
-import com.example.demo.response.UserResponse;
+import com.example.demo.controller.request.CarRequest;
+import com.example.demo.controller.response.CarResponse;
+import com.example.demo.controller.response.UserResponse;
 import jakarta.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataRetrievalFailureException;
@@ -18,14 +19,19 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 @Service
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+@Slf4j
 public class CarService implements ICarService {
-  @Autowired
-  private CarRepository carRepository;
+
+  private final CarRepository carRepository;
 
   @Override
   public CarResponse getById(Long id) {
-    Car car = carRepository.findById(id)
-        .orElseThrow(() -> new DataRetrievalFailureException("Car not found"));
+    Car car =
+        carRepository
+            .findById(id)
+            .orElseThrow(() -> new DataRetrievalFailureException("Car not found"));
+    log.info(carRepository.toString());
     CarResponse carResponse = new CarResponse();
     BeanUtils.copyProperties(car, carResponse);
     return carResponse;
@@ -35,29 +41,36 @@ public class CarService implements ICarService {
   public List<CarResponse> getAll(Integer offset, Integer limit) {
     Pageable pageable = PageRequest.of(offset, limit, Sort.by("id"));
     List<Car> cars = carRepository.findAll(pageable);
-    return cars.stream().map(car -> {
-      CarResponse carResponse = new CarResponse();
-      BeanUtils.copyProperties(car, carResponse);
-      if (car.getUser() != null) {
-        UserResponse userResponse = new UserResponse();
-        BeanUtils.copyProperties(car.getUser(), userResponse);
-        carResponse.setUser(userResponse);
-      }
-      return carResponse;
-    }).collect(Collectors.toList());
+    return cars.stream()
+        .map(
+            car -> {
+              CarResponse carResponse = new CarResponse();
+              BeanUtils.copyProperties(car, carResponse);
+              if (car.getUser() != null) {
+                UserResponse userResponse = new UserResponse();
+                BeanUtils.copyProperties(car.getUser(), userResponse);
+                carResponse.setUser(userResponse);
+              }
+              return carResponse;
+            })
+        .toList();
   }
 
   @Override
-  public void add(CarRequest req) {
+  public Long add(CarRequest req) {
     Car car = new Car();
     BeanUtils.copyProperties(req, car);
     carRepository.save(car);
+    return car.getId();
   }
 
   @Override
   public void update(Long id, CarRequest carRequest) {
-
+    Car car = carRepository.findById(id).orElseThrow();
+    car.setModel(carRequest.getModel());
+    carRepository.save(car);
   }
+
   @Override
   @Transactional
   public void buyCar(Long userId, Long carId) {
@@ -68,6 +81,7 @@ public class CarService implements ICarService {
       throw new DataRetrievalFailureException("Car not found");
     }
   }
+
   @Override
   public void delete(Long id) {
     carRepository.deleteById(id);
